chore: rename plugin

--- a/src/com.doriankarter.zoomctl.sdPlugin/manifest.json
+++ b/src/com.doriankarter.zoomctl.sdPlugin/manifest.json
@@ -42,7 +42,7 @@
 				}
 			],
 			"Tooltip": "This is an example tooltip",
-			"UUID": "com.elgato.template.action",
+			"UUID": "com.doriankarter.zoomctl.action",
 			"PropertyInspectorPath": "actions/template/property-inspector/inspector.html"
 		}
 	]
